Fix dashboard progress bar text overlapping and wrapping on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -267,7 +267,7 @@ body {
 /* Syllabus Progress Indicator */
 .progress-bar-container {
   width: 100%;
-  height: 25px;
+  height: 32px;
   background-color: #fff;
   border: 3px solid #000;
   box-shadow: 3px 3px 0px #000;
@@ -291,6 +291,7 @@ body {
   font-size: 0.85rem;
   color: #000;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 /* Badge System */
